# PIIC_test_files

crazyflie/config/: crazyflies.yaml
crazyflie_examples/: setup.cfg
crazyflie_examples/crazyflie_examples/: cybaer_controller.py  cybaer_executor.py  cybaer_full_state.py  cybaer_hover.py  cybaer_hover_multi.py  cybaer_infinite_traj.py  cybaer_land.py  cybaer_still.py  script_escada.py  teste_com_comando.py  teste_com_gui.py  teste_com_teclado.py  teste_obstaculos.py  teste_obstaculos_v1.py
crazyflie_py/crazyflie_py/: __init__.py  cspace.npy  object_avoiding.py  pathfind.py  rrt_obstacles.npy
