[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    cybaer_infinite_traj = crazyflie_examples.cybaer_infinite_traj:main
    cybaer_land = crazyflie_examples.cybaer_land:main
    cybaer_hover = crazyflie_examples.cybaer_hover:main
    cybaer_hover_multi = crazyflie_examples.cybaer_hover_multi:main
    cybaer_full_state = crazyflie_examples.cybaer_full_state:main
    cybaer_executor = crazyflie_examples.cybaer_executor:main
    cybaer_controller = crazyflie_examples.cybaer_controller:main
    cybaer_still = crazyflie_examples.cybaer_still:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    group_mask = crazyflie_examples.group_mask:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    swap = crazyflie_examples.swap:main
    infinite_flight = crazyflie_examples.infinite_flight:main
    arming = crazyflie_examples.arming:main
    teste_com_gui = crazyflie_examples.teste_com_gui:main
    teste_com_teclado = crazyflie_examples.teste_com_teclado:main
    teste_com_comando = crazyflie_examples.teste_com_comando:main
    teste_obstaculos = crazyflie_examples.teste_obstaculos:main
    teste_obstaculos_v1 = crazyflie_examples.teste_obstaculos_v1:main
    script_escada = crazyflie_examples.script_escada:main

